--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ repositories {
 
 dependencies {
   api 'org.apache.commons:commons-math3:3.6.1'
+
+  compile 'org.projectlombok:lombok:1.16.18'
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
 
   implementation 'com.google.guava:guava:21.0'
