available_books endpoint working

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
 
   compile 'org.projectlombok:lombok:1.16.18'
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
+  compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
 
   implementation 'com.google.guava:guava:21.0'
 
