--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
+buildscript {
+  repositories {
+    jcenter()
+  }
+
+  dependencies {
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
+  }
+}
+
 apply plugin: 'java-library'
 apply plugin: 'idea'
+apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
   jcenter()
@@ -12,7 +25,7 @@ dependencies {
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile 'com.squareup.retrofit2:converter-jackson:2.3.0'
 
-  implementation 'com.google.guava:guava:21.0'
+  implementation 'com.google.guava:guava:22.0'
 
   testImplementation 'junit:junit:4.12'
 }
