--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,18 @@ buildscript {
   }
 }
 
+plugins {
+  //id 'com.github.hierynomus.license' version '0.11.0'
+  id 'net.researchgate.release' version '2.6.0'
+}
+
 apply plugin: 'java-library'
 apply plugin: 'idea'
+apply plugin: 'eclipse'
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
